5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1578_1331.log
== TEST (2019-03-16 17:18:04) 
-- CODE:
12*4//3
4%2
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 17:18:10) 
-- CODE:
12*4//3
4%2
-- EXECUTION TIME:
0.173413
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 17:18:20) 
-- CODE:
12*4//3
3%2
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:08:28) 
-- CODE:
(12*4+2)//3
50%3
print(round(50, 66))

-- OUTPUT:
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 18:08:36) 
-- CODE:
(12*4+2)//3
50%3
print(round(50, 66))

-- EXECUTION TIME:
0.120997
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-16 18:09:06) 
-- CODE:
(12*4+2)//3
50%3
print(round(16, 66))

-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 18:09:11) 
-- CODE:
(12*4+2)//3
50%3
print(round(16, 66))

-- EXECUTION TIME:
0.119281
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:04:17) 
-- CODE:
expressão = 3x+y=50
(12*4+2)//3
50%3
print(round(16, 2))


-- ERROR:
File "XXXX", line 1
    expressão = 3x+y=50
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:05:01) 
-- CODE:
expressão = 
(12*4+2)//3
50%3
print(round(16, 2))


-- ERROR:
File "XXXX", line 1
    expressão = 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:12:08) 
-- CODE:
expressão = 12*3+14
(12*4+2)//3
50%3
print(round(expressão, 2))


-- OUTPUT:
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:12:15) 
-- CODE:
expressão = 12*3+14
(12*4+2)//3
50%3
print(round(expressão, 2))


-- EXECUTION TIME:
0.116257
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:14:13) 
-- CODE:
expressão = (12*3+14)/3
(12*4+2)//3
50%3
print(round(expressão, 2))


-- OUTPUT:
16.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:14:21) 
-- CODE:
expressão = (12*3+14)/3
(12*4+2)//3
50%3
print(round(expressão, 2))


-- EXECUTION TIME:
0.207293
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.67
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:14:53) 
-- CODE:
expressão = (12*3+14)//3
50%3
print(round(expressão, 2))


-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:14:57) 
-- CODE:
expressão = (12*3+14)//3
50%3
print(round(expressão, 2))


-- EXECUTION TIME:
0.135369
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:15:14) 
-- CODE:
expressão = (12*3+14)//3
print(round(expressão, 2))


-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:15:18) 
-- CODE:
expressão = (12*3+14)//3
print(round(expressão, 2))


-- EXECUTION TIME:
0.215148
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:15:27) 
-- CODE:
expressão = (12*3+14)//3


-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:15:34) 
-- CODE:
expressão = (12*3+14)//3


-- EXECUTION TIME:
0.201359
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:17:02) 
-- CODE:
expressão = (12*3+14)//3



-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:17:49) 
-- CODE:
expressão = (12*3+14)//3
expressão % 3



-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:17:54) 
-- CODE:
expressão = (12*3+14)//3
expressão % 3



-- EXECUTION TIME:
0.136776
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:23:24) 
-- CODE:
expressão = (




-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:26:07) 
-- CODE:
expressão = 12




-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:26:15) 
-- CODE:
expressão = 12




-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:26:51) 
-- CODE:
(12*3+14)//3
-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:27:07) 
-- CODE:
12*3+14//3
-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:27:14) 
-- CODE:
12*3+14//3
-- EXECUTION TIME:
0.142947
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:27:23) 
-- CODE:
12*3+14/3
-- EXECUTION TIME:
0.216212
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:29:27) 
-- CODE:
12*3+14/3
-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:29:30) 
-- CODE:
12*3+14/3
-- EXECUTION TIME:
0.143738
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:20:13) 
-- CODE:
expressão = 50//3
-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 23:21:54) 
-- CODE:
expressão = 50//3
50%3
print(expressão, 50%3)
-- OUTPUT:
16 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 23:21:59) 
-- CODE:
expressão = 50//3
50%3
print(expressão, 50%3)
-- EXECUTION TIME:
0.153991
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16 2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
